# sieval

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  eval_theoremqa_5shot_qwen72b.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: sieval-preflight.md  sieval-release.md
.claude/rules/: code-review.md  core-utils.md  datasets.md  deps.md  engineering-infra.md  infer.md  scripts.md  tasks.md  tests.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  ci-failure.yml  documentation.yml  feature-request.yml  performance.yml  rfc.yml  usage.yml
.github/workflows/: ci.yml
docs/guide/: concurrency.md  configuration.md  faq.md  infer.md  profiling.md
examples/: README.md  infer-recipe-override.yaml  leaderboard-math-sft.yaml  quickstart.yaml  qwen3-8b_128k_sglang.yaml  qwen3-8b_32k_sglang.yaml  qwen3-8b_4k_sglang copy.yaml  qwen3-8b_4k_sglang.yaml  qwen3-8b_64k_sglang.yaml  qwen3-8b_8k_sglang.yaml  qwen3-8b_sglang.yaml  ruler-multilength.yaml  ruler-qa.yaml  ruler-qwen3-8b-nonthinking-withyarn-128k.yaml  ruler-qwen3-8b-nonthinking-withyarn-64k.yaml  ruler-qwen3-8b-nonthinking.yaml  ruler-qwen3-8b-thinking.yaml  ruler.yaml  run.sh
examples/hardware/: a100_qwen2.5_1.5b.yaml
leaderboards/: README.md  sft_fast_202511.yaml
scripts/: check_layer_imports.py  check_preflight.py  format.sh  gen_paul_graham_essays.py  gen_ruler_qwen3_8b_sglang.py  gen_ruler_sweep.py  lint.sh  sanitize.sh  sync_meta_index.py  sync_package_stubs.py
sieval/: __init__.py  __main__.py
sieval/cli/: CLAUDE.md  __init__.py  _readiness.py  main.py  output.py  run.py  validation.py
sieval/cli/dataset/: __init__.py  commands.py  render.py
sieval/cli/infer/: __init__.py  commands.py  lifecycle.py  recipe.py
sieval/cli/leaderboard/: __init__.py  _ruler_avg.py  annotation.py  card.py  catalog.py  commands.py  ruler.py  scanner.py  session.py
sieval/cli/task/: __init__.py  commands.py  render.py
sieval/community/: CLAUDE.md  imo_bench.py  math.py  matharena.py  mbpp.py  mmlu_pro.py  openbookqa.py  t_eval.py
sieval/community/ifbench/: __init__.py  evaluation_lib.py  instructions.py
sieval/community/instruction_following_eval/: evaluation_lib.py  instructions.py  instructions_registry.py  instructions_util.py
sieval/community/simple_evals/: common.py  drop_eval.py  humaneval_eval.py  math_eval.py  mmlu_eval.py
sieval/core/: CLAUDE.md  types.py
sieval/core/datasets/: __init__.py  dataset.py  meta.py
sieval/core/models/: __init__.py  chat_model.py  gen_model.py  model.py  sglang_gen_model.py
sieval/core/runners/: __init__.py  multi_runner.py  (+1 more)
sieval/datasets/: CLAUDE.md  __init__.py  __init__.pyi  aime_2024.py  aime_2025.py  aime_2026.py  c_eval.py  cmmlu.py  drop.py  gpqa_diamond.py  gsm8k.py  hmmt_feb_2025.py  hmmt_feb_2026.py  human_eval.py  ifbench.py  ifeval.py  imo_answer_bench.py  livecodebench_code_generation.py  math_500.py  mbpp.py  mmlu.py  mmlu_pro.py  openbookqa.py  t_eval.py  theoremqa.py
sieval/infer/: CLAUDE.md  __init__.py  config.py  deployer.py  introspect.py  params.py
sieval/meta/: __init__.py  index.json  loader.py
sieval/tasks/: CLAUDE.md  __init__.py  __init__.pyi  aime_2024_0shot_gen.py  aime_2025_0shot_gen.py  aime_2026_0shot_gen.py  c_eval_kshot_ppl.py  cmmlu_kshot_base_gen.py  drop_kshot_gen.py  gpqa_diamond_0shot_gen.py  gsm8k_8shot_base_gen.py  gsm8k_kshot_base_gen.py  hmmt_feb_2025_0shot_gen.py  hmmt_feb_2026_0shot_gen.py  human_eval_0shot_base_gen.py  human_eval_0shot_gen.py  ifbench_0shot_gen.py  ifeval_0shot_gen.py  imo_answer_bench_0shot_gen.py  livecodebench_code_generation_0shot_gen.py  livecodebench_code_generation_kshot_base_gen.py  math_500_0shot_gen.py  mbpp_kshot_base_gen.py  mmlu_0shot_gen.py  mmlu_pro_0shot_gen.py  openbookqa_kshot_gen.py  ruler_0shot_gen.py  t_eval_before_calling_0shot_gen.py  theoremqa_kshot_base_gen.py
tests/: README.md  conftest.py
tests/integration/: test_lifecycle.py  test_llm_judge.py  test_metadata_flow.py  test_multi_task.py  test_pass_at_k.py  test_runner_edge_cases.py  test_single_turn_eval.py
tests/leaderboards/: __init__.py
tests/performance/: test_concurrency_scaling.py  test_dataset_loading.py  test_io_overhead.py  test_memory_usage.py  test_pipeline_throughput.py  test_resume_speed.py  test_serialization.py
tests/unit/: conftest.py  test_lazy_exports.py
(+200 files in other folders)
