[project]
name = "sieval"
description = "SiEval - Model Delivery Quality Verification System"
authors = [{ name = "ScitiX" }]
dynamic = ["version"]
dependencies = [
  "anyio>=4.11.0",
  "datasets>=4.2.0",
  "httpx>=0.28.1",
  "huggingface-hub>=0.36.0",
  "loguru>=0.7.3",
  "openai>=2.6.0",
  "orjson>=3.11.4",
  "packaging>=21.0",
  "pyyaml>=6.0.3",
  "tqdm>=4.67.1",
  "typer>=0.24.1",
  "xxhash>=3.6.0",
]
requires-python = "<3.15,>=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/scitix/sieval"
Repository = "https://github.com/scitix/sieval"
Issues = "https://github.com/scitix/sieval/issues"
Changelog = "https://github.com/scitix/sieval/blob/main/CHANGELOG.md"

[project.optional-dependencies]
drop = ["numpy<=2.2", "scipy>=1.16.3"]
ifeval = [
  "absl-py>=2.3.1",
  "langdetect>=1.0.9",
  "nltk>=3.9.2",
  "immutabledict>=4.2.2",
]
math = ["latex2sympy2-extended>=1.10.2", "math-verify>=0.8.0"]
t-eval = ["numpy<=2.2", "sentence-transformers>=5.1.2"]

[project.scripts]
sieval = "sieval.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pre-commit>=4.5.0",
  "ruff>=0.14.7",
  "ty>=0.0.5",
  "types-pyyaml>=6.0.12.20250915",
  "types-tqdm>=4.67.0.20250809",
]
test = ["mutmut>=3.5.0", "psutil>=7.2.2", "pytest>=9.0", "pytest-cov>=7.0"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
write_to = "sieval/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
excludes = ["CLAUDE.md", "tests/", "**/*.py,cover"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "sieval/community", "submodules"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["datasets.*", "pandas.*", "pyfaidx.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
exclude = ["sieval/community", "submodules"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "G",      # flake8-logging-format
  "C4",     # flake8-comprehensions
  "SIM",    # flake8-simplify
  "UP",     # pyupgrade
  "ARG001", # unused arguments in functions
  "T201",   # print statements are not allowed
]

[tool.ruff.lint.per-file-ignores]
"sieval/cli/output.py" = [
  "T201",
] # output.py uses print() for stdout machine-readable output (JSON/YAML)
"sieval/community/**/*.py" = [
  "E501",
  "T201",
] # community/ follows upstream implementations — do not enforce line-length or print restrictions
"scripts/**/*.py" = [
  "T201",
] # scripts/ are CLI tools — print() for progress output
"tests/**/*.py" = ["T201"] # tests/ may use print() for debugging

[tool.ty.environment]
python = "./.venv"
root = ["./"]

[tool.ty.src]
respect-ignore-files = true
exclude = [".worktrees", "sieval/community", "submodules"]

# _version.py is gitignored (generated at build time); mypy needs the
# type: ignore but ty sees the local copy and considers it unused.
[[tool.ty.overrides]]
include = ["sieval/__init__.py"]

[tool.ty.overrides.rules]
unused-type-ignore-comment = "ignore"

# t_eval lazy-imports sentence_transformers (torch), absent from CI's light env,
# so ty can't resolve that import. Intentional — keeps CI torch-free.
[[tool.ty.overrides]]
include = ["sieval/tasks/t_eval_before_calling_0shot_gen.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.coverage.run]
source = ["sieval/core"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true
exclude_also = ["@(abc\\.)?abstractmethod", "\\.\\.\\.", "if TYPE_CHECKING:"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mutmut]
paths_to_mutate = ["sieval/core"]
tests_dir = ["tests/unit"]
exclude = ["sieval/core/**/__init__.py"]
also_copy = [
  "sieval/community",
  "sieval/datasets",
  "sieval/tasks",
  "sieval/infer",
  "sieval/cli",
  "sieval/__main__.py",
]

[tool.pytest]
markers = ["stress: resource-intensive tests (run with: pytest -m stress)"]
testpaths = [
  "tests/unit",
  "tests/integration",
  "tests/acceptance",
  "tests/performance",
  "tests/leaderboards",
]
addopts = ["--strict-markers", "-m", "not stress"]
